internX/internX/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internx
  labels:
    app.kubernetes.io/name: internx
